make event better

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 		<title>WheelShare</title>
+		<style>
+			::-webkit-scrollbar {
+				background-color: white;
+				width: 0.75rem;
+			}
+			::-webkit-scrollbar-thumb {
+				background-color: #e0e0e0;
+				border-radius: 0.5rem;
+			}
+		</style>
 	</head>
 	<body>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUnWIrt-H4RuP2YFLpVPz4oAjBhpOOoyI&libraries=places"></script>
