improve event ui again

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
 				background-color: #e0e0e0;
 				border-radius: 0.5rem;
 			}
+			input:focus {
+				outline: none !important;
+			}
 		</style>
 	</head>
 	<body>
