google tag manager

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,20 @@
 				outline: none !important;
 			}
 		</style>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-T35TH9CN2E"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-T35TH9CN2E');
+		</script>
 	</head>
 	<body>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUnWIrt-H4RuP2YFLpVPz4oAjBhpOOoyI&libraries=places"></script>
