--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script
 			async
-			src="https://www.googletagmanager.com/gtag/js?id=G-T35TH9CN2E"
+			src="https://www.googletagmanager.com/gtag/js?id=G-4Y2HV76N09"
 		></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
@@ -48,7 +48,7 @@
 			}
 			gtag('js', new Date());
 
-			gtag('config', 'G-T35TH9CN2E');
+			gtag('config', 'G-4Y2HV76N09');
 		</script>
 	</head>
 	<body>
